# routing-preference

./: .env.example  .gitignore  .gitmodules  GUIDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: litellm_config.yaml  models.yaml  opencode.json  selection.json
docker/: Dockerfile
docs/: AGENT.md  FILESYSTEM.md  FRAMEWORK.md  ISOLATION.md  ISSUES.md  JUDGE.md  JUDGE_CALIBRATION.md  OBJECTIVE.md  PLAN.md  PROJECT.md  SELECTION.md
docs/agent/: prompts.json
docs/agent/prompts/: V1.md
docs/judge/: prompts.json
docs/judge/characteristics/correctness/: CORRECTNESS_BASIS.md  CORRECTNESS_DESCRIPTION.md  CORRECTNESS_NAME.md  CORRECTNESS_SCORING_STEPS.md  CORRECTNESS_SCORING_STEPS_V1.md  CORRECTNESS_SCORING_STEPS_V2.md  (+6 more)
docs/judge/context/: V1.md  V2.md
docs/judge/prompts/: JUDGE_SCORING_ALL_PROMPT_V1.md  JUDGE_SCORING_PROMPT_V1.md  JUDGE_SCORNG_ALL_PROMPT_V1.md
docs/objective/: COMPLETION_TIME.md  IMPLEMENTATION_PLAN.md  STEP_COUNT.md
patches/: track-exposed-files.patch
src/: __init__.py  cli.py  collector.py  generator.py  judge_cli.py  judge_pipeline.py  models.py  pipeline.py  storage.py
src/collection/: __init__.py  github_collector.py  jetbrains_collector.py
src/dataset/: __init__.py  loader.py
src/evaluation/: __init__.py  export.py  loading.py  models.py
src/filtering/: __init__.py
src/generation/: __init__.py
src/issues/: __init__.py  classifier.py  cli.py  collector.py  filters.py  models.py  reviewer.py  storage.py
src/judge/: __init__.py  batch_scorer.py  characteristics.py  judge.py  models.py  prompt_scorer.py  ranking_judge.py  ranking_models.py  ranking_scorer.py  ranking_storage.py  scorer.py  source_files.py  storage.py
src/judge/legacy/: __init__.py  characteristics.py  scorer.py
src/judge/loader/: __init__.py  characteristic_loader.py  prompt_loader.py  xml_parser.py
src/judge/ranking/: __init__.py  judge.py  scorer.py  storage.py
src/judge/scoring/: __init__.py  batch_scorer.py  judge.py  prompt_scorer.py
src/objective/: __init__.py  metrics.py
src/sampling/: __init__.py
src/selection/: __init__.py  balanced.py  config.py  cpsat.py  models.py  selector.py  storage.py
(+65 files in other folders)
