[project]
name = "routing-preference"
version = "0.1.0"
description = "Research pipeline for AI code solution generation"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]",
    "python-dotenv",
    "pyyaml",
    "mini-swe-agent",
]

[project.scripts]
generate = "src.cli:main"

[dependency-groups]
dev = []

[tool.uv]
package = true

[tool.uv.sources]
mini-swe-agent = { path = "external/mini-swe-agent", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
