[project]
name = "routing-preference"
version = "0.1.0"
description = "Research pipeline for AI code solution generation"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "langdetect",
    "litellm",
    "mini-swe-agent",
    "python-dotenv",
    "requests",
]

[project.scripts]
routing = "src.cli:main"
collect-issues = "src.issues.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.uv]
package = true

[tool.uv.sources]
mini-swe-agent = { path = "external/mini-swe-agent", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
